@@ -1,5 +1,13 @@
 2001-07-26  Bradford Hovinen  <hovinen@ximian.com>
 
+	* applier.c (renderer_render_wallpaper): Restore some lost tweaks
+	from earlier.
+
+	* preferences.c (preferences_init): strdup the home directory
+
+	* applier.c: Store preview widget in the renderer, not the applier
+	itself
+
 	* background-properties-capplet.c (create_dialog): Add a "(none)"
 	string to the history
 
